# agent-status

./: .env.example  FORK.md  README.md  package-lock.json  package.json
.claude/skills/agent-status-provider-integration/: SKILL.md
.claude/skills/release-macos/: SKILL.md
.claude/skills/release-windows/: SKILL.md
docs/: RELEASE.md  index.html
scripts/: merge-manifest.mjs  release-mac.sh  release-win.ps1
src/: App.tsx  format.ts  main.tsx  platform.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: usage.rs
src-tauri/src/scanner/: codex.rs  grok.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/vendors/: claude.rs  mod.rs
src/components/: About.tsx  AgentOverview.tsx  HoverPopover.tsx  ProviderDetail.tsx  Settings.tsx  UpdateBanner.tsx
src/hooks/: useUpdater.ts  useUsage.ts
src/styles/: app.css
updater/: latest.json
