[package]
name = "agent-status"
version = "0.1.2"
description = "Agent Usage Monitor — local CLI usage dashboard"
edition = "2021"
rust-version = "1.77"

[lib]
name = "agent_status_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
machine-uid = "0.5"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

# incremental = false works around a linker error ("_anon.*.llvm.* symbol(s) not
# found for architecture arm64") caused by an interaction between Rust's
# incremental compilation and Xcode 26's new linker (ld-prime / ld-1230.1).
[profile.dev]
opt-level = 1
incremental = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
